--- a/Fluentify-Backend/package.json
+++ b/Fluentify-Backend/package.json
@@ -7,6 +7,7 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "init-db": "node scripts/initDatabase.js",
+    "migrate-chat": "node scripts/migrate-chat-tables.js",
     "test-gemini": "node src/test-gemini.js"
   },
   "keywords": [],
