--- a/Fluentify-Backend/docker-compose.yml
+++ b/Fluentify-Backend/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./src/database/01-tables.sql:/docker-entrypoint-initdb.d/01-tables.sql
+      - ./src/database/02-tables.sql:/docker-entrypoint-initdb.d/02-tables.sql
+      - ./src/database/03-auth-enhancements.sql:/docker-entrypoint-initdb.d/03-auth-enhancements.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
