--- a/Fluentify-Backend/package.json
+++ b/Fluentify-Backend/package.json
@@ -9,7 +9,15 @@
     "init-db": "node scripts/initDatabase.js",
     "setup-db": "node scripts/setup-database.js",
     "migrate-chat": "node scripts/migrate-chat-tables.js",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "test-gemini": "node src/test-gemini.js"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   },
   "keywords": [],
   "author": "",
@@ -29,6 +37,11 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
