--- a/Fluentify-Backend/package.json
+++ b/Fluentify-Backend/package.json
@@ -9,7 +9,8 @@
     "init-db": "node scripts/initDatabase.js",
     "setup-db": "node scripts/setup-database.js",
     "migrate-chat": "node scripts/migrate-chat-tables.js",
-    "test-gemini": "node src/test-gemini.js"
+    "test-gemini": "node src/test-gemini.js",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +30,33 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "roots": ["<rootDir>/src"],
+    "testMatch": ["<rootDir>/src/test/**/*.test.js"],
+    "collectCoverageFrom": [
+      "src/controllers/adminUserController.js",
+      "src/controllers/analyticsController.js",
+      "src/controllers/authController.js",
+      "src/controllers/courseController.js",
+      "src/controllers/contestController.js",
+      "src/controllers/moduleAdminController.js",
+      "src/controllers/preferencesController.js",
+      "src/controllers/progressController.js",
+      "src/controllers/retellController.js",
+      "src/controllers/tutorController.js",
+      "src/controllers/userManagementController.js",
+      "src/utils/*.js",
+      "src/services/*.js",
+      "src/repositories/*.js",
+      "src/middlewares/*.js"
+    ],
+    "coverageReporters": ["text", "lcov"],
+    "moduleNameMapper": {}
   }
 }
