--- a/Fluentify-Backend/package.json
+++ b/Fluentify-Backend/package.json
@@ -31,15 +31,19 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
     "supertest": "^7.0.0"
   },
   "jest": {
     "testEnvironment": "node",
-    "roots": ["<rootDir>/src"],
-    "testMatch": ["<rootDir>/src/test/**/*.test.js"],
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "testMatch": [
+      "<rootDir>/src/test/**/*.test.js"
+    ],
     "collectCoverageFrom": [
       "src/controllers/adminUserController.js",
       "src/controllers/analyticsController.js",
@@ -57,7 +61,10 @@
       "src/repositories/*.js",
       "src/middlewares/*.js"
     ],
-    "coverageReporters": ["text", "lcov"],
+    "coverageReporters": [
+      "text",
+      "lcov"
+    ],
     "moduleNameMapper": {}
   }
 }
