--- a/Fluentify-Frontend/package.json
+++ b/Fluentify-Frontend/package.json
@@ -26,13 +26,17 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@playwright/test": "^1.56.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "cypress": "^15.7.0",
+    "cypress-audit": "^1.1.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "lighthouse": "^13.0.1",
     "vite": "^7.1.2"
   }
 }
